test/src/e2e_vm_tests/test_programs/should_pass/language/const_generics/stdout.snap
---
source: test/src/snapshot/mod.rs
---
> forc build --path test/src/e2e_vm_tests/test_programs/should_pass/language/const_generics --no-experimental const_generics --release
exit status: 1
output:
    Building test/src/e2e_vm_tests/test_programs/should_pass/language/const_generics
   Compiling library std (sway-lib-std)
   Compiling script const_generics (test/src/e2e_vm_tests/test_programs/should_pass/language/const_generics)
warning
  --> test/src/e2e_vm_tests/test_programs/should_pass/language/const_generics/src/main.sw:50:5
   |
48 | enum TwoVariants<T, const N: u64> {
49 |     Nothing: (),
50 |     Array: [T; N]
   |     ----- Enum variant Array is never constructed.
51 | }
52 | 
   |
____

warning
  --> test/src/e2e_vm_tests/test_programs/should_pass/language/const_generics/src/main.sw:87:5
   |
85 |       }
86 |   
87 |       fn return_n2_2(self) -> u64 {
   |  _____-
88 | |         N2
89 | |     }
   | |_____- This method is never called.
90 |   }
91 |   const NNN: u64 = 9;
   |
____

warning
  --> test/src/e2e_vm_tests/test_programs/should_pass/language/const_generics/src/main.sw:91:7
   |
89 |     }
90 | }
91 | const NNN: u64 = 9;
   |       --- This declaration is never used.
92 | 
93 | #[inline(never)]
   |
____

error
  --> test/src/e2e_vm_tests/test_programs/should_pass/language/const_generics/src/main.sw:17:15
   |
15 | }
16 | 
17 | impl<T, const N: u64> A for [T; N] {
   |               ^ This needs "const_generics" to be enabled, but it is currently disabled. For more details go to https://github.com/FuelLabs/sway/issues/6860.
18 |     fn my_len(self) -> u64 {
19 |         match LotsOfVariants::A(N) {
   |
____

error
  --> test/src/e2e_vm_tests/test_programs/should_pass/language/const_generics/src/main.sw:27:19
   |
25 | }
26 | 
27 | struct S<T, const N: u64> {
   |                   ^ This needs "const_generics" to be enabled, but it is currently disabled. For more details go to https://github.com/FuelLabs/sway/issues/6860.
28 | }
29 | 
   |
____

error
  --> test/src/e2e_vm_tests/test_programs/should_pass/language/const_generics/src/main.sw:30:15
   |
28 | }
29 | 
30 | impl<T, const Z: u64> S<T, Z> {
   |               ^ This needs "const_generics" to be enabled, but it is currently disabled. For more details go to https://github.com/FuelLabs/sway/issues/6860.
31 |     pub fn len_xxx(self) -> u64 {
32 |         Z
   |
____

error
  --> test/src/e2e_vm_tests/test_programs/should_pass/language/const_generics/src/main.sw:37:23
   |
35 | 
36 | // Enum with just one variant
37 | enum OneVariant<const N: u64> {
   |                       ^ This needs "const_generics" to be enabled, but it is currently disabled. For more details go to https://github.com/FuelLabs/sway/issues/6860.
38 |     A: [u64; N],
39 | }
   |
____

error
  --> test/src/e2e_vm_tests/test_programs/should_pass/language/const_generics/src/main.sw:41:12
   |
39 | }
40 | 
41 | impl<const Z: u64> OneVariant<Z> {
   |            ^ This needs "const_generics" to be enabled, but it is currently disabled. For more details go to https://github.com/FuelLabs/sway/issues/6860.
42 |     pub fn return_n(self) -> u64 {
43 |         Z
   |
____

error
  --> test/src/e2e_vm_tests/test_programs/should_pass/language/const_generics/src/main.sw:48:27
   |
46 | 
47 | // Enum with more than one variant
48 | enum TwoVariants<T, const N: u64> {
   |                           ^ This needs "const_generics" to be enabled, but it is currently disabled. For more details go to https://github.com/FuelLabs/sway/issues/6860.
49 |     Nothing: (),
50 |     Array: [T; N]
   |
____

error
  --> test/src/e2e_vm_tests/test_programs/should_pass/language/const_generics/src/main.sw:53:15
   |
51 | }
52 | 
53 | impl<T, const N: u64> TwoVariants<T, N> {
   |               ^ This needs "const_generics" to be enabled, but it is currently disabled. For more details go to https://github.com/FuelLabs/sway/issues/6860.
54 |     pub fn len_xxx2(self) -> u64 {
55 |         N
   |
____

error
  --> test/src/e2e_vm_tests/test_programs/should_pass/language/const_generics/src/main.sw:60:32
   |
58 | 
59 | // Enum with more than one const generics
60 | enum TwoConstGenerics<T, const N1: u64, const N2: u64> {
   |                                ^^ This needs "const_generics" to be enabled, but it is currently disabled. For more details go to https://github.com/FuelLabs/sway/issues/6860.
61 |     A: [T; N1],
62 |     B: [T; N2],
   |
____

error
  --> test/src/e2e_vm_tests/test_programs/should_pass/language/const_generics/src/main.sw:60:47
   |
58 | 
59 | // Enum with more than one const generics
60 | enum TwoConstGenerics<T, const N1: u64, const N2: u64> {
   |                                               ^^ This needs "const_generics" to be enabled, but it is currently disabled. For more details go to https://github.com/FuelLabs/sway/issues/6860.
61 |     A: [T; N1],
62 |     B: [T; N2],
   |
____

error
  --> test/src/e2e_vm_tests/test_programs/should_pass/language/const_generics/src/main.sw:65:15
   |
63 | }
64 | 
65 | impl<T, const N1: u64, const N2: u64> TwoConstGenerics<T, N1, N2> {
   |               ^^ This needs "const_generics" to be enabled, but it is currently disabled. For more details go to https://github.com/FuelLabs/sway/issues/6860.
66 |     fn return_n1(self) -> u64 {
67 |         N1
   |
____

error
  --> test/src/e2e_vm_tests/test_programs/should_pass/language/const_generics/src/main.sw:65:30
   |
63 | }
64 | 
65 | impl<T, const N1: u64, const N2: u64> TwoConstGenerics<T, N1, N2> {
   |                              ^^ This needs "const_generics" to be enabled, but it is currently disabled. For more details go to https://github.com/FuelLabs/sway/issues/6860.
66 |     fn return_n1(self) -> u64 {
67 |         N1
   |
____

error
  --> test/src/e2e_vm_tests/test_programs/should_pass/language/const_generics/src/main.sw:82:15
   |
80 | }
81 | 
82 | impl<T, const N2: u64, const N1: u64> TwoConstGenerics<T, N2, N1> {
   |               ^^ This needs "const_generics" to be enabled, but it is currently disabled. For more details go to https://github.com/FuelLabs/sway/issues/6860.
83 |     fn return_n1_2(self) -> u64 {
84 |         N1
   |
____

error
  --> test/src/e2e_vm_tests/test_programs/should_pass/language/const_generics/src/main.sw:82:30
   |
80 | }
81 | 
82 | impl<T, const N2: u64, const N1: u64> TwoConstGenerics<T, N2, N1> {
   |                              ^^ This needs "const_generics" to be enabled, but it is currently disabled. For more details go to https://github.com/FuelLabs/sway/issues/6860.
83 |     fn return_n1_2(self) -> u64 {
84 |         N1
   |
____

error
  --> test/src/e2e_vm_tests/test_programs/should_pass/language/const_generics/src/main.sw:94:19
   |
92 | 
93 | #[inline(never)]
94 | fn return_n<const NNN: u64>() -> u64 {
   |                   ^^^ This needs "const_generics" to be enabled, but it is currently disabled. For more details go to https://github.com/FuelLabs/sway/issues/6860.
95 |     NNN
96 | }
   |
____

error
   --> test/src/e2e_vm_tests/test_programs/should_pass/language/const_generics/src/main.sw:99:29
    |
 97 | 
 98 | #[inline(never)]
 99 | fn return_inner_const<const ZZZ: u64>() -> u64 {
    |                             ^^^ This needs "const_generics" to be enabled, but it is currently disabled. For more details go to https://github.com/FuelLabs/sway/issues/6860.
100 |     const ZZZ: u64 = 7;
101 |     ZZZ
    |
____

error
   --> test/src/e2e_vm_tests/test_programs/should_pass/language/const_generics/src/main.sw:105:36
    |
103 | 
104 | #[inline(never)]
105 | fn const_with_const_generics<const B: u64>() {
    |                                    ^ This needs "const_generics" to be enabled, but it is currently disabled. For more details go to https://github.com/FuelLabs/sway/issues/6860.
106 |     const A: u64 = B + 1;
107 |     let _ = __dbg(A);
    |
____

error: Associated function or method is not found
   --> test/src/e2e_vm_tests/test_programs/should_pass/language/const_generics/src/main.sw:115:26
    |
...
115 |     let _ = __dbg([C {}].len());
    |                          ^^^ "len([const_generics::C; 1])" is not found for type "[const_generics::C; 1]".
    |
____

error: Associated function or method is not found
   --> test/src/e2e_vm_tests/test_programs/should_pass/language/const_generics/src/main.sw:116:19
    |
...
116 |     assert([C {}].len() == 1);
    |                   ^^^ "len([const_generics::C; 1])" is not found for type "[const_generics::C; 1]".
    |
____

error: Associated function or method is not found
   --> test/src/e2e_vm_tests/test_programs/should_pass/language/const_generics/src/main.sw:116:25
    |
...
116 |     assert([C {}].len() == 1);
    |                         ^^ "eq({unknown}, {numeric}) -> bool" is not found for type "{unknown}".
    |
____

error: Associated function or method is not found
   --> test/src/e2e_vm_tests/test_programs/should_pass/language/const_generics/src/main.sw:120:31
    |
...
120 |     let _ = __dbg([C {}, C{}].len());
    |                               ^^^ "len([const_generics::C; 2])" is not found for type "[const_generics::C; 2]".
    |
____

error: Associated function or method is not found
   --> test/src/e2e_vm_tests/test_programs/should_pass/language/const_generics/src/main.sw:121:24
    |
...
121 |     assert([C {}, C{}].len() == 2);
    |                        ^^^ "len([const_generics::C; 2])" is not found for type "[const_generics::C; 2]".
    |
____

error: Associated function or method is not found
   --> test/src/e2e_vm_tests/test_programs/should_pass/language/const_generics/src/main.sw:121:30
    |
...
121 |     assert([C {}, C{}].len() == 2);
    |                              ^^ "eq({unknown}, {numeric}) -> bool" is not found for type "{unknown}".
    |
____

error: Associated function or method is not found
   --> test/src/e2e_vm_tests/test_programs/should_pass/language/const_generics/src/main.sw:160:14
    |
...
160 |     assert(a.len() == 3);
    |              ^^^ "len(str[3])" is not found for type "str[3]".
    |
____

error: Associated function or method is not found
   --> test/src/e2e_vm_tests/test_programs/should_pass/language/const_generics/src/main.sw:160:20
    |
...
160 |     assert(a.len() == 3);
    |                    ^^ "eq({unknown}, {numeric}) -> bool" is not found for type "{unknown}".
    |
____

error: Associated function or method is not found
   --> test/src/e2e_vm_tests/test_programs/should_pass/language/const_generics/src/main.sw:161:21
    |
...
161 |     let _ = __dbg(a.len());
    |                     ^^^ "len(str[3])" is not found for type "str[3]".
    |
____

error: Associated function or method is not found
   --> test/src/e2e_vm_tests/test_programs/should_pass/language/const_generics/src/main.sw:165:14
    |
...
165 |     assert(a.len() == 5);
    |              ^^^ "len(str[5])" is not found for type "str[5]".
    |
____

error: Associated function or method is not found
   --> test/src/e2e_vm_tests/test_programs/should_pass/language/const_generics/src/main.sw:165:20
    |
...
165 |     assert(a.len() == 5);
    |                    ^^ "eq({unknown}, {numeric}) -> bool" is not found for type "{unknown}".
    |
____

error: Associated function or method is not found
   --> test/src/e2e_vm_tests/test_programs/should_pass/language/const_generics/src/main.sw:166:21
    |
...
166 |     let _ = __dbg(a.len());
    |                     ^^^ "len(str[5])" is not found for type "str[5]".
    |
____

error: Associated function or method is not found
   --> test/src/e2e_vm_tests/test_programs/should_pass/language/const_generics/src/main.sw:170:14
    |
...
170 |     assert(a.len() == 70);
    |              ^^^ "len(str[70])" is not found for type "str[70]".
    |
____

error: Associated function or method is not found
   --> test/src/e2e_vm_tests/test_programs/should_pass/language/const_generics/src/main.sw:170:20
    |
...
170 |     assert(a.len() == 70);
    |                    ^^ "eq({unknown}, {numeric}) -> bool" is not found for type "{unknown}".
    |
____

error: Associated function or method is not found
   --> test/src/e2e_vm_tests/test_programs/should_pass/language/const_generics/src/main.sw:171:21
    |
...
171 |     let _ = __dbg(a.len());
    |                     ^^^ "len(str[70])" is not found for type "str[70]".
    |
____

  Aborting due to 31 errors.
error: Failed to compile const_generics

> forc test --path test/src/e2e_vm_tests/test_programs/should_pass/language/const_generics --test-threads 1 --dbgs --reverts --release
exit status: 0
output:
    Building test/src/e2e_vm_tests/test_programs/should_pass/language/const_generics
   Compiling library std (sway-lib-std)
   Compiling script const_generics (test/src/e2e_vm_tests/test_programs/should_pass/language/const_generics)
warning
  --> test/src/e2e_vm_tests/test_programs/should_pass/language/const_generics/src/main.sw:87:5
   |
85 |       }
86 |   
87 |       fn return_n2_2(self) -> u64 {
   |  _____-
88 | |         N2
89 | |     }
   | |_____- This method is never called.
90 |   }
91 |   const NNN: u64 = 9;
   |
____

warning
  --> test/src/e2e_vm_tests/test_programs/should_pass/language/const_generics/src/main.sw:91:7
   |
89 |     }
90 | }
91 | const NNN: u64 = 9;
   |       --- This declaration is never used.
92 | 
93 | #[inline(never)]
   |
____

  Compiled script "const_generics" with 2 warnings.
    Finished release [optimized + fuel] target(s) [760 B] in ???
     Running 1 test, filtered 0 tests

tested -- const_generics

      test run_main ... ok (???, 448 gas)

test result: OK. 1 passed; 0 failed; finished in ???

    Finished in ???
